# start_companion

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/agents/: __init__.py  graph.py  nodes.py  state.py
backend/agents/sub_agents/: __init__.py  emotion_analyzer.py  game_strategist.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  agent.py  chat.py  config_api.py  memory.py  websocket.py
backend/app/config/: __init__.py  config.example.yaml  settings.py
backend/context_providers/: __init__.py  base.py  memory_provider.py  persona_provider.py  profile_provider.py
backend/custom/: __init__.py
backend/knowledge/: __init__.py  ingest.py  retriever.py
backend/memory/: __init__.py  extractor.py  manager.py  retrieval_gate.py  schema.py
backend/memory/long_term/: __init__.py  store.py
backend/memory/profile/: __init__.py  base.py  store.py  updater.py
backend/memory/relational/: __init__.py  base.py  factory.py  mysql_store.py  sqlite_store.py
backend/memory/short_term/: __init__.py  summarizer.py  window.py
backend/memory/vector_stores/: __init__.py  base.py  chroma_store.py  factory.py  milvus_store.py  qdrant_store.py
backend/models/: __init__.py  provider.py
backend/presets/: __init__.py  preset_manager.py
backend/presets/agents/default/: config.yaml  persona.yaml  prompts.yaml
backend/services/: __init__.py
backend/services/search/: __init__.py  web_search.py
backend/services/vision/: __init__.py  analyzer.py
backend/services/voice/: __init__.py  asr.py  tts.py
backend/tools/: __init__.py  game_info_tool.py  knowledge_tool.py  memory_tool.py  screenshot.py  web_search_tool.py
docker/: Dockerfile.backend  docker-compose.yaml
docs/: ARCHITECTURE.md
